# sbncode

./: .gitignore  .gitmodules  CMakeLists.txt  Module.txt  README.md  Restructuring.md  diff.txt  fadfasfdafdasfas eqw¡r ,9asdfdsaewqre qwvir0+,.  flashmatch_sbnd.root  log.txt  table_deps_sbncode  table_frag_sbncode
fclmodule/: CMakeLists.txt  fclmodule.cxx
sbnanalysis/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  bash_completion  env.sh
sbnanalysis/FlatMaker/: .gitignore  TreeUtils.h  convert_to_flat.C  gen_flatrecord.py  load_libs.C
sbnanalysis/ana/: CMakeLists.txt  README.md  static.cxx
sbnanalysis/cmakescripts/: CMakeLists.txt  RootMacros.cmake
sbnanalysis/core/: CMakeLists.txt  Event.cxx  Event.hh  Loader.cxx  Loader.hh  Main.cxx  Main.hh  PostProcessorBase.cxx  PostProcessorBase.hh  ProcessorBase.cxx  ProcessorBase.hh  ProcessorBlock.cxx  ProcessorBlock.hh  ProviderManager.cxx  ProviderManager.hh  SelectionBase.cxx  SelectionBase.hh  ServiceManager.cxx  ServiceManager.hh  SubRun.hh  linkdef.h  sbn-grid.cxx  sbn-postprocess.cxx  sbn.cxx  sbn_static.cxx  static.cxx
sbnanalysis/doc/: Doxyfile
sbnanalysis/env/: buildsbnanalysis.sh  install_sbncode-v07_11_00.sh  install_sbncode-v08_03_00.sh  make_setup_script.sh
sbnanalysis/io/: CMakeLists.txt  ProcessorBase.cxx  ProcessorBase.hh  SelectionBase.cxx  SelectionBase.hh
sbnanalysis/selection/: Event.cxx  Event.hh  EventSelectionHelper.cxx  EventSelectionHelper.hh  GeneralAnalysisHelper.cxx  GeneralAnalysisHelper.hh  LoadEvents.cxx  LoadEvents.hh  Particle.cxx  Particle.hh  Plane.cxx  Plane.hh  README.md  SelectionToolBase.cxx  SelectionToolBase.hh  cleanup.sh
sbnanalysis/util/: CMakeLists.txt  Covariance.cxx  Covariance.h  FakeDataSmearing.cxx  FakeDataSmearing.hh  Interaction.cxx  Interaction.hh  RecoUtil.cxx  RecoUtil.hh  sbn_cov.cxx
sbncode/: CMakeLists.txt
sbncode/BeamData/: BeamData_module.cc  CMakeLists.txt  beamdata.fcl  beamdata_microboone.fcl
sbncode/BeamSpillInfoRetriever/: CMakeLists.txt  MWRData.cpp  POTTools.cpp  POTTools.h  SBNDPOTTools.cpp  SBNDPOTTools.h  getFOM.cpp  getFOM.h  getUbooneFOM.C
sbncode/CAFAna/: .gitignore  CMakeLists.txt  build_dicts.sh  cafana.py  cafe  classes_def.xml  diag_flux_systs.C  diag_xsec_systs.C  load_cafana_libs.C  rootlogon.C
sbncode/CAFMaker/: AssociationUtil.h  CAFMaker.fcl  CAFMakerParams.h  CAFMaker_module.cc  CAFMaker_module.cc#  CMakeLists.txt  FillBlip.cxx  FillBlip.h  FillExposure.cxx  FillExposure.h  FillFlashMatch.cxx  FillFlashMatch.h  FillReco.cxx  FillReco.h  FillTrigger.cxx  FillTrigger.h  FillTrue.cxx  FillTrue.h  GNUmakefile  ICAFSelectionTool.h  LinkDef.h  Utils.h  cafmakerjob.fcl  cafmakerjob_icarus.fcl  cafmakerjob_icarus_fmatch.fcl  cafmakerjob_icarus_sce.fcl  cafmakerjob_icarus_split.fcl  cafmakerjob_sbnd.fcl  cafmakerjob_sbnd_3drift_sce.fcl  cafmakerjob_sbnd_3drift_sce_runfmatch.fcl  cafmakerjob_sbnd_3drift_sce_runfmatch_geniewgt.fcl  cafmakerjob_sbnd_fmatch.fcl  cafmakerjob_sbnd_geniewgt.fcl  cafmakerjob_sbnd_sce.fcl  cafmakerjob_sbnd_sce_geniewgt.fcl  classes.h  classes_def.xml
sbncode/Calibration/: AnodeCrossT0_module.cc  CMakeLists.txt  ITCSSelectionTool.h  TrackCaloSkimmer.h  TrackCaloSkimmerSelectAllTrack_tool.cc  TrackCaloSkimmerSelectAnocde2CathodeTrack_tool.cc  TrackCaloSkimmerSelectAnode2CathodeTrack_tool.cc  TrackCaloSkimmerSelectClearCosmicMuon_tool.cc  TrackCaloSkimmerSelectStoppingTrack_tool.cc  TrackCaloSkimmerSelectThroughgoingTrack_tool.cc  TrackCaloSkimmer_module.cc  run_anodetest_icarus.fcl
sbncode/CalorimetryLikelihood/: CMakeLists.txt  CalorimetryAnalysis_module.cc  run_calorimetry_analysis_sbnd.fcl
sbncode/Cluster3D/: CMakeLists.txt  Cluster3DSBN_module.cc  SnippetHit3DBuilderSBN_tool.cc  cluster3dalgorithms_sbn.fcl  cluster_sbn.fcl
sbncode/CosmicID/: CMakeLists.txt  CRUMBS_module.cc  sbn_crumbs_producer.fcl
sbncode/DataTypes/: CMakeLists.txt  Experiment.hh  FileMeta.hh  SubRun.hh
sbncode/DetSim/: AdjustSimForTrigger_module.cc  CMakeLists.txt  FilterSimEnergyDeposits_module.cc
sbncode/DiMuonSelection/: CMakeLists.txt  NuVertexChargeTree_module.cc  run_vertexcharge_icarus.fcl  run_vertexcharge_sbnd.fcl
sbncode/EventGenerator/: CMakeLists.txt
sbncode/EventWeight/: CMakeLists.txt  EventWeight_module.cc  FluxHistWeightCalc.cxx  FluxUnisimWeightCalc.cxx  GenieWeightCalc.cxx  LICENSE  MCEventWeight.h  README.md  WeightCalc.cxx  WeightCalc.h  WeightCalcCreator.cxx  WeightCalcCreator.h  WeightCalcFactory.cxx  WeightCalcFactory.h  Weight_t.h  XSecRatioWeightCalc.cxx  classes.h  classes_def.xml  generate_weightcalc.py
sbncode/FlashMatch/: CMakeLists.txt  FlashPredict.hh  FlashPredict_module.cc  FlashPredict_module.cc.save
sbncode/FlatMaker/: .gitignore  BranchPolicy.h  CMakeLists.txt  Prolog.h  TreeUtils.h  convert_to_flat.cc  flatten_caf.cc  gen_flatrecord.py
sbncode/FluxReader/: BooNEInterface.cxx  BooNEInterface.h  CMakeLists.txt  DK2NuInterface.cxx  DK2NuInterface.h  FluxGeoFilter_module.cc  FluxInterface.h  FluxReader.cxx  FluxReader.h  FluxReaderAna_module.cc  FluxReader_source.cc  GSimpleInterface.cxx  GSimpleInterface.h  classes.h  classes_def.xml
sbncode/GeometryTools/: CMakeLists.txt  CRTGeoAlg.cc  CRTGeoAlg.h  TPCGeoAlg.cc  TPCGeoAlg.h
sbncode/HitFinder/: CMakeLists.txt  ChannelROIToWire_module.cc  GaussHitFinderSBN_module.cc  WireToChannelROI_module.cc  hitfindermodules_sbn.fcl  wirechannelroiconverters_sbn.fcl
sbncode/LArG4/: CMakeLists.txt  G4InfoReducer_module.cc  MergeSimSourcesLiteUtility.cxx  MergeSimSourcesLiteUtility.h  MergeSimSourcesLite_module.cc  MergeSimSourcesSBN_module.cc  SimpleMerge_module.cc  g4inforeducer.fcl  simplemerge.fcl
sbncode/LArRecoProducer/: CMakeLists.txt  CRTHitConverter_module.cc  CRTHitMatch_module.cc  CRTHitMatch_module.cc_fixme  CRUMBS_module.cc  DThetaKinkFinder_module.cc  DThetaKinkTree_module.cc  MCSFitAllPID_module.cc  PCA.cc  PCA.h  PCAngleKinkFinder_module.cc  PCAngleKinkTree_module.cc  PCAnglePlaneMaker_module.cc  PMTFlashTriggerFilter_module.cc  PMTFlashTriggerMaker_module.cc  RangePAllPID_module.cc  ShowerCosmicCylinder_module.cc  (+45 more)
(+3180 files in other folders)
